@@ -1,3 +1,8 @@
+2008-07-03  Noel O'Boyle  <baoilleach@gmail.com>
+
+	* windows-vc2005/OBPythonOBF/setup.py: Update setup.py to include
+	forcefield files when installing
+
 2008-07-03  Michael Banck  <mbanck@gmx.net>
 
 	* scripts/Makefile.am (dist-hook): Do not fail if make distclean does
